# final-project

./: CITATION  README.md  Untitled.ipynb  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: final_project_yingyu.tex  final_project_yingyu_pres.tex  task_paper.py
src/final_project_yingyu/: __init__.py
src/final_project_yingyu/analysis/: model.py  predict.py  task_analysis.py
src/final_project_yingyu/data/: bds_all.csv  emp.csv  io.csv  io_naics_raw.csv  sic-naics.csv
src/final_project_yingyu/data_management/: __init__.py  clean_data.py  function.py  task_data_management.py
src/final_project_yingyu/final/: __init__.py  plot.py  task_final.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: test_clean_data.py
