[metadata]
name = final_project_yingyu
description = Final Project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Yingyu922/final_project_yingyu
author = Yingyu Wu
author_email = ywuu1@uni-bonn.de
license = Not open source
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Not open source License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/Yingyu922/final_project_yingyu
    Documentation = https://github.com/Yingyu922/final_project_yingyu
    Github = https://github.com/Yingyu922/final_project_yingyu
    Tracker = https://github.com/Yingyu922/final_project_yingyu/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/final_project_yingyu/_version.py
